--- a/about/about.html
+++ b/about/about.html
@@ -17,160 +17,212 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <aside class="float-start h-auto">
-      <div
-        class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark"
-        style="width: 280px; height: 100vh"
-      >
-        <div class="text-nav p-3">
-          <!-- start Name -->
-          <a
-            href="/"
-            class="d-flex align-items-center text-white text-decoration-none"
-          >
-            <span class="fs-1">agusSe.</span>
-          </a>
-          <!-- End Name -->
+    <div class="d-flex flex-row">
+      <!-- Start Aside -->
+      <aside class="h-auto position-fixed">
+        <div
+          class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark"
+          style="width: 280px; height: 100vh"
+        >
+          <div class="text-nav p-3">
+            <!-- start Name -->
+            <a
+              href="/"
+              class="d-flex align-items-center text-white text-decoration-none"
+            >
+              <span class="fs-1">agusSe.</span>
+            </a>
+            <!-- End Name -->
 
-          <!-- Start List Menu -->
-          <ul class="nav nav-pills flex-column mt-5 position-relative">
-            <li class="nav-item">
-              <a
-                href="#"
-                class="nav-link text-white"
-                aria-current="page"
-                data-bs-toggle="tooltip"
-                data-bs-placement="right"
-                data-bs-title="Tooltip on right"
+            <!-- Start List Menu -->
+            <ul class="nav nav-pills flex-column mt-5 position-relative">
+              <li class="nav-item">
+                <a
+                  href="#"
+                  class="nav-link text-white"
+                  aria-current="page"
+                  data-bs-toggle="tooltip"
+                  data-bs-placement="right"
+                  data-bs-title="Tooltip on right"
+                >
+                  <i class="bi bi-house me-2"></i>
+                  HOME
+                </a>
+              </li>
+              <li>
+                <a href="#" class="nav-link text-white">
+                  <i class="bi bi-file-earmark-person me-2"></i>
+                  ABOUT
+                </a>
+              </li>
+              <li>
+                <a href="#" class="nav-link text-white">
+                  <i class="bi bi-collection me-2"></i>
+                  WORKS
+                </a>
+              </li>
+              <li>
+                <a href="#" class="nav-link text-white">
+                  <i class="bi bi-envelope-at me-2"></i>
+                  CONTACT
+                </a>
+              </li>
+            </ul>
+            <!-- End List Menu-->
+            <!-- Start buttom list -->
+            <div class="mt-5 flex-column d-flex">
+              <div class="flex-column d-flex ms-3 row-gap-3">
+                <a href="/"
+                  ><i class="social-media bi bi-instagram text-white"></i
+                ></a>
+                <a href="/"
+                  ><i class="social-media bi bi-github text-white"></i>
+                </a>
+                <a href="/"
+                  ><i class="social-media bi bi-twitter-x text-white"></i>
+                </a>
+              </div>
+              <div class="" style="margin-top: 7rem">
+                <p class="fw-light fs-10" style="font-size: x-small">
+                  Copyright ©2024 <span>Agus Setiwan</span>. All right reserved.
+                </p>
+              </div>
+            </div>
+            <!-- End buttom list -->
+          </div>
+        </div>
+      </aside>
+      <main class="px-3 position-relative">
+        <div class="welcome mt-5">
+          <p>Nice to meet you!</p>
+          <h1 class="text-dark">Welcome to...</h1>
+        </div>
+        <div class="d-flex flex-row mt-5">
+          <div class="left-container">
+            <div class="about">
+              <div class="box-img position-relative">
+                <img src="./young-man.png" alt="" class="img-about" />
+              </div>
+              <div class="box-text text-center">
+                <h1 class="gradient-text mt-5">Agus Setiawan</h1>
+                <p>
+                  <span>Web Developper</span> based in <span>Indonesia</span>
+                </p>
+                <a
+                  href=""
+                  class=""
+                  style="font-size: 10px; color: rgba(63, 94, 251, 1) 0%"
+                  >Download My CV <i class="bi bi-arrow-down-square-fill"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+          <div class="container right-container">
+            <div class="row row-cols-2">
+              <div class="col">
+                <p>
+                  <i class="bi bi-telephone-forward-fill"></i> +62 878-2236-8008
+                </p>
+                <p>
+                  <i class="bi bi-envelope-arrow-down-fill"></i>
+                  agussetiawanphy3@gmail.com
+                </p>
+              </div>
+              <div class="col">
+                <p><i class="bi bi-person-rolodex"></i> 32 yrs</p>
+                <p><i class="bi bi-geo-alt-fill"></i> Indonesia, Indramayu</p>
+              </div>
+
+              <div class="col mt-5">
+                <div class="mb-4">
+                  <h1 class="float-start">10+</h1>
+                  <p class="ms-2">Years experience...</p>
+                </div>
+                <div>
+                  <p>
+                    Hello there! My name is Jacob Jones. I am a web designer &
+                    developer, and I'm very passionate and dedicated to my work.
+                  </p>
+                </div>
+              </div>
+              <div class="col mt-5">
+                <div class="mb-4">
+                  <h1 class="float-start">14</h1>
+                  <p class="ms-2">Clients Worldwide...</p>
+                </div>
+                <div>
+                  <p>
+                    With 10+ years experience as a professional a graphic
+                    designer, I have acquired the skills and knowledge necessary
+                    to make your project a success.
+                  </p>
+                </div>
+              </div>
+              <div
+                class="api col col-12 d-flex flex-row align-content-center p-2 rounded-1"
               >
-                <i class="bi bi-house me-2"></i>
-                HOME
-              </a>
-            </li>
-            <li>
-              <a href="#" class="nav-link text-white">
-                <i class="bi bi-file-earmark-person me-2"></i>
-                ABOUT
-              </a>
-            </li>
-            <li>
-              <a href="#" class="nav-link text-white">
-                <i class="bi bi-collection me-2"></i>
-                WORKS
-              </a>
-            </li>
-            <li>
-              <a href="#" class="nav-link text-white">
-                <i class="bi bi-envelope-at me-2"></i>
-                CONTACT
-              </a>
-            </li>
-          </ul>
-          <!-- End List Menu-->
-          <!-- Start buttom list -->
-          <div class="mt-5 flex-column d-flex">
-            <div class="flex-column d-flex ms-3 row-gap-3">
-              <a href="/"
-                ><i class="social-media bi bi-instagram text-white"></i
-              ></a>
-              <a href="/"
-                ><i class="social-media bi bi-github text-white"></i>
-              </a>
-              <a href="/"
-                ><i class="social-media bi bi-twitter-x text-white"></i>
-              </a>
-            </div>
-            <div class="" style="margin-top: 7rem">
-              <p class="fw-light fs-10" style="font-size: x-small">
-                Copyright ©2024 <span>Agus Setiwan</span>. All right reserved.
-              </p>
-            </div>
-          </div>
-          <!-- End buttom list -->
-        </div>
-      </div>
-    </aside>
-    <main>
-      <div class="d-flex flex-row">
-        <div class="left-container">
-          <div class="welcome">
-            <p>Nice to meet you!</p>
-            <h1>Welcome to...</h1>
-          </div>
-          <div class="img-about">
-            <img src="./young-man.png" alt="" />
-            <h1>Agus Setiawan</h1>
-            <p>Web Developper based in Indonesia</p>
-            <a href="">Download My CV</a>
-          </div>
-        </div>
-        <div class="right-container">
-          <div class="row row-cols-2">
-            <div class="col">
-              <p>
-                <i class="bi bi-telephone-forward-fill"></i> +62 878-2236-8008
-              </p>
-              <p>
-                <i class="bi bi-envelope-arrow-down-fill"></i>
-                agussetiawanphy3@gmail.com
-              </p>
-            </div>
-            <div class="col">
-              <p><i class="bi bi-person-rolodex"></i> 32 yrs</p>
-              <p><i class="bi bi-geo-alt-fill"></i> Indonesia, Indramayu</p>
-            </div>
-
-            <div class="col">
-              <div>
-                <h1 class="float-start">10+</h1>
-                <p>Years experience...</p>
-              </div>
-              <div>
-                <p>
-                  Hello there! My name is Jacob Jones. I am a web designer &
-                  developer, and I'm very passionate and dedicated to my work.
-                </p>
-              </div>
-            </div>
-            <div class="col">
-              <div>
-                <h1 class="float-start">14</h1>
-                <p>Clients Worldwide...</p>
-              </div>
-              <div>
-                <p>
-                  With 10+ years experience as a professional a graphic
-                  designer, I have acquired the skills and knowledge necessary
-                  to make your project a success.
-                </p>
-              </div>
-            </div>
-            <div class="col col-12 bg-black">
-              <div>
-                <i class="bi bi-quote"></i>
-              </div>
-              <div>
-                <p>
-                  “Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Faucibus sed sit ultrices et sed metus sollicitudin.”
-                </p>
+                <div class="quote-icon ms-5">
+                  <i class="bi bi-quote"></i>
+                </div>
+                <div class="quote-text">
+                  <p style="margin-bottom: 0">
+                    “Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Faucibus sed sit ultrices et sed metus sollicitudin.”
+                  </p>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-    </main>
-    <div class="my-experience">
-      <div class="myex-left">
-        <p>Experience</p>
-        <h2>My experience</h2>
-        <p>
-          Hello there! My name is Jacob Jones. I am a web designer & developer,
-          and I'm very passionate and dedicated to my work.
-        </p>
-        <button>Download my resume</button>
-      </div>
-      <div class="myex-right"></div>
+        <div class="my-experience mt-4 mb-4 rounded-1">
+          <div class="d-flex flex-row justify-content-around">
+            <div class="myex-left w-25">
+              <p>Experience</p>
+              <h2>My experience</h2>
+              <p class="mt-2">
+                Hello there! My name is Jacob Jones. I am a web designer &
+                developer, and I'm very passionate and dedicated to my work.
+              </p>
+              <button class="btn btn-about mb-3">Download my resume</button>
+            </div>
+            <div class="myex-right">
+              <div class="item">
+                <div
+                  class="text-light d-flex flex-row justify-content-between"
+                  style="font-size: 10px"
+                >
+                  <p>-2018 - Present</p>
+                  <p class="link-light">-Rolling Thunder</p>
+                </div>
+                <h3>Lead UI/UX Designer</h3>
+                <hr />
+              </div>
+              <div class="item">
+                <div
+                  class="text-light d-flex flex-row justify-content-between"
+                  style="font-size: 10px"
+                >
+                  <p>-2018 - Present</p>
+                  <p class="link-light">-Rolling Thunder</p>
+                </div>
+                <h3>Lead UI/UX Designer</h3>
+                <hr />
+              </div>
+              <div class="item">
+                <div
+                  class="text-light d-flex flex-row justify-content-between"
+                  style="font-size: 10px"
+                >
+                  <p>-2018 - Present</p>
+                  <p class="link-light">-Rolling Thunder</p>
+                </div>
+                <h3>Lead UI/UX Designer</h3>
+                <hr />
+              </div>
+            </div>
+          </div>
+        </div>
+      </main>
     </div>
 
     <script
