--- a/home/home.html
+++ b/home/home.html
@@ -77,7 +77,7 @@
                 ><i class="social-media bi bi-github text-white"></i>
               </a>
               <a href="/"
-                ><i class="social-media bi bi-twitter-x text-white"></i>
+                ><i class="social-media bi bi-linkedin text-white"></i>
               </a>
             </div>
             <div class="" style="margin-top: 7rem">
@@ -122,7 +122,7 @@
           >
             <a href="/"><i class="bi bi-instagram"></i></a>
             <a href="/"><i class="bi bi-github"></i></a>
-            <a href="/"><i class="bi bi-twitter-x"></i></a>
+            <a href="/"><i class="media bi bi-linkedin"></i></a>
             <hr style="rotate: 90deg; color: aqua" />
           </div>
         </div>
