--- a/works/works.html
+++ b/works/works.html
@@ -81,7 +81,7 @@
                   ><i class="social-media bi bi-github text-white"></i>
                 </a>
                 <a href="/"
-                  ><i class="social-media bi bi-twitter-x text-white"></i>
+                  ><i class="social-media bi bi-linkedin text-white"></i>
                 </a>
               </div>
               <div class="" style="margin-top: 7rem">
@@ -224,11 +224,7 @@
                 <div class="accordion-body">
                   Placeholder content for this accordion, which is intended to
                   demonstrate the <code>.accordion-flush</code> class. This is
-                  the third item's accordion body. Nothing more exciting
-                  happening here in terms of content, but just filling up the
-                  space to make it look, at least at first glance, a bit more
-                  representative of how this would look in a real-world
-                  application.
+                  the third item's accordion body.
                 </div>
               </div>
             </div>
@@ -260,53 +256,156 @@
               </div>
             </div>
           </div>
+          <button class="w-25 mx-auto mt-4 rounded-2 p-2">More project</button>
         </div>
-        <div class="my-experience mt-4 mb-4 rounded-1">
-          <div class="d-flex flex-row justify-content-around">
-            <div class="myex-left w-25">
-              <p>Experience</p>
-              <h2>My experience</h2>
-              <p class="mt-2">
-                Hello there! My name is Jacob Jones. I am a web designer &
-                developer, and I'm very passionate and dedicated to my work.
-              </p>
-              <button class="btn btn-about mb-3">Download my resume</button>
+        <div class="testimonial mt-5 rounded-1 w-100 h-auto mb-4 p-5">
+          <div id="carouselExampleCaptions" class="carousel slide">
+            <div class="carousel-indicators">
+              <button
+                type="button"
+                data-bs-target="#carouselExampleCaptions"
+                data-bs-slide-to="0"
+                class="active"
+                aria-current="true"
+                aria-label="Slide 1"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleCaptions"
+                data-bs-slide-to="1"
+                aria-label="Slide 2"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleCaptions"
+                data-bs-slide-to="2"
+                aria-label="Slide 3"
+              ></button>
             </div>
-            <div class="myex-right">
-              <div class="item">
-                <div
-                  class="text-light d-flex flex-row justify-content-between"
-                  style="font-size: 10px"
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <svg
+                  class="bd-placeholder-img bd-placeholder-img-lg d-block w-100"
+                  width="800"
+                  height="400"
+                  xmlns="http://www.w3.org/2000/svg"
+                  role="img"
+                  aria-label="Placeholder: First slide"
+                  preserveAspectRatio="xMidYMid slice"
+                  focusable="false"
                 >
-                  <p>-2018 - Present</p>
-                  <p class="link-light">-Rolling Thunder</p>
+                  <title>Placeholder</title>
+                  <rect width="100%" height="100%" fill="#777"></rect>
+                  <text x="50%" y="50%" fill="#555" dy=".3em"></text>
+                </svg>
+                <div class="carousel-caption d-none d-md-block">
+                  <div class="card-carousel">
+                    <img src="../home/aguss.png" alt="" />
+                    <p>
+                      Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                      Blanditiis rerum voluptate deleniti, animi eligendi quis
+                      vel commodi. Vitae voluptatem eos, placeat impedit
+                      voluptatum sunt itaque vel fugiat, aut recusandae
+                      molestias.
+                    </p>
+                  </div>
+                  <h5 class="mt-3">First slide label</h5>
+                  <p>
+                    Some representative placeholder content for the first slide.
+                  </p>
                 </div>
-                <h3>Lead UI/UX Designer</h3>
-                <hr />
               </div>
-              <div class="item">
-                <div
-                  class="text-light d-flex flex-row justify-content-between"
-                  style="font-size: 10px"
+              <div class="carousel-item">
+                <svg
+                  class="bd-placeholder-img bd-placeholder-img-lg d-block w-100"
+                  width="800"
+                  height="400"
+                  xmlns="http://www.w3.org/2000/svg"
+                  role="img"
+                  aria-label="Placeholder: Second slide"
+                  preserveAspectRatio="xMidYMid slice"
+                  focusable="false"
                 >
-                  <p>-2018 - Present</p>
-                  <p class="link-light">-Rolling Thunder</p>
+                  <title>Placeholder</title>
+                  <rect width="100%" height="100%" fill="#666"></rect>
+                  <text x="50%" y="50%" fill="#444" dy=".3em">
+                    Second slide
+                  </text>
+                </svg>
+                <div class="carousel-caption d-none d-md-block">
+                  <div class="card-carousel">
+                    <img src="../home/aguss.png" alt="" />
+                    <p>
+                      Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                      Blanditiis rerum voluptate deleniti, animi eligendi quis
+                      vel commodi. Vitae voluptatem eos, placeat impedit
+                      voluptatum sunt itaque vel fugiat, aut recusandae
+                      molestias.
+                    </p>
+                  </div>
+                  <h5 class="mt-3">Second slide label</h5>
+                  <p>
+                    Some representative placeholder content for the first slide.
+                  </p>
                 </div>
-                <h3>Lead UI/UX Designer</h3>
-                <hr />
               </div>
-              <div class="item">
-                <div
-                  class="text-light d-flex flex-row justify-content-between"
-                  style="font-size: 10px"
+              <div class="carousel-item">
+                <svg
+                  class="bd-placeholder-img bd-placeholder-img-lg d-block w-100"
+                  width="800"
+                  height="400"
+                  xmlns="http://www.w3.org/2000/svg"
+                  role="img"
+                  aria-label="Placeholder: Third slide"
+                  preserveAspectRatio="xMidYMid slice"
+                  focusable="false"
                 >
-                  <p>-2018 - Present</p>
-                  <p class="link-light">-Rolling Thunder</p>
+                  <title>Placeholder</title>
+                  <rect width="100%" height="100%" fill="#555"></rect>
+                  <text x="50%" y="50%" fill="#333" dy=".3em">Third slide</text>
+                </svg>
+                <div class="carousel-caption d-none d-md-block">
+                  <div class="card-carousel">
+                    <img src="../home/aguss.png" alt="" />
+                    <p>
+                      Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                      Blanditiis rerum voluptate deleniti, animi eligendi quis
+                      vel commodi. Vitae voluptatem eos, placeat impedit
+                      voluptatum sunt itaque vel fugiat, aut recusandae
+                      molestias.
+                    </p>
+                  </div>
+                  <h5 class="mt-3">Third slide label</h5>
+                  <p>
+                    Some representative placeholder content for the first slide.
+                  </p>
                 </div>
-                <h3>Lead UI/UX Designer</h3>
-                <hr />
               </div>
             </div>
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#carouselExampleCaptions"
+              data-bs-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#carouselExampleCaptions"
+              data-bs-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Next</span>
+            </button>
           </div>
         </div>
       </main>
