--- a/about/about.html
+++ b/about/about.html
@@ -17,77 +17,76 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div class="d-flex flex-row">
-      <!-- Start Aside -->
-      <aside class="h-auto position-fixed">
+    <div class="d-flex flex-row justify-content-between">
+      <aside class="">
         <div
-          class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark"
-          style="width: 280px; height: 100vh"
+          class="aside d-flex flex-column flex-shrink-0 p-3 text-white bg-dark"
+          style="max-width: 250px; height: 100vh"
         >
-          <div class="text-nav p-3">
+          <div
+            class="text-nav p-3 h-100 d-flex flex-column justify-content-between"
+          >
             <!-- start Name -->
             <a
               href="/"
               class="d-flex align-items-center text-white text-decoration-none"
             >
-              <span class="fs-1">agusSe.</span>
+              <span class="fs-1">Ag.</span>
             </a>
             <!-- End Name -->
 
             <!-- Start List Menu -->
             <ul class="nav nav-pills flex-column mt-5 position-relative">
-              <li class="nav-item">
+              <li class="nav-item d-flex flex-row align-items-center">
+                <i class="bi bi-house me-2"></i>
                 <a
                   href="#"
-                  class="nav-link text-white"
+                  class="nav-link text-white d-none d-sm-block"
                   aria-current="page"
                   data-bs-toggle="tooltip"
                   data-bs-placement="right"
                   data-bs-title="Tooltip on right"
                 >
-                  <i class="bi bi-house me-2"></i>
                   HOME
                 </a>
               </li>
-              <li>
-                <a href="#" class="nav-link text-white">
-                  <i class="bi bi-file-earmark-person me-2"></i>
+              <li class="nav-item d-flex flex-row align-items-center">
+                <i class="bi bi-file-earmark-person me-2"></i>
+                <a
+                  href="./about/about.html"
+                  class="nav-link text-white d-none d-sm-block"
+                >
                   ABOUT
                 </a>
               </li>
-              <li>
-                <a href="#" class="nav-link text-white">
-                  <i class="bi bi-collection me-2"></i>
+              <li class="nav-item d-flex flex-row align-items-center">
+                <i class="bi bi-collection me-2"></i>
+                <a
+                  href="./works/works.html"
+                  class="nav-link text-white d-none d-sm-block"
+                >
                   WORKS
                 </a>
               </li>
-              <li>
-                <a href="#" class="nav-link text-white">
-                  <i class="bi bi-envelope-at me-2"></i>
+              <li class="nav-item d-flex flex-row align-items-center">
+                <i class="bi bi-envelope-at me-2"></i>
+                <a
+                  href="./contact/contact.html"
+                  class="nav-link text-white d-none d-sm-block"
+                >
                   CONTACT
                 </a>
               </li>
             </ul>
             <!-- End List Menu-->
-            <!-- Start buttom list -->
-            <div class="mt-5 flex-column d-flex">
-              <div class="flex-column d-flex ms-3 row-gap-3">
-                <a href="/"
-                  ><i class="social-media bi bi-instagram text-white"></i
-                ></a>
-                <a href="/"
-                  ><i class="social-media bi bi-github text-white"></i>
-                </a>
-                <a href="/"
-                  ><i class="social-media bi bi-linkedin text-white"></i>
-                </a>
-              </div>
-              <div class="" style="margin-top: 7rem">
-                <p class="fw-light fs-10" style="font-size: x-small">
-                  Copyright ©2024 <span>Agus Setiwan</span>. All right reserved.
-                </p>
-              </div>
+            <!-- Sart buttom list -->
+
+            <div class="" style="margin-top: 7rem">
+              <p class="fw-light fs-10" style="font-size: x-small">
+                Copyright ©2024 <span>Agus Setiwan</span>. All right reserved.
+              </p>
             </div>
+
             <!-- End buttom list -->
           </div>
         </div>
