--- a/index.html
+++ b/index.html
@@ -14,13 +14,10 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
     />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href=".//styles.css" />
   </head>
   <body>
     <div class="d-flex flex-row justify-content-between">
-      <!-- Start Aside -->
       <aside class="">
         <div
           class="aside d-flex flex-column flex-shrink-0 p-3 text-white bg-dark"
@@ -94,67 +91,43 @@
           </div>
         </div>
       </aside>
-      <main class="px-3 position-relative">
-        <div class="welcome mt-5">
-          <p><em>Contact</em></p>
-          <h1 class="text-dark">Reach out me</h1>
-        </div>
-        <div class="container d-flex flex-row justify-content-between g-3">
-          <div class="form-contact">
-            <form class="row g-3">
-              <div class="col-md-6">
-                <label for="inputName" class="form-label">Name</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="inputName"
-                  placeholder="Agus Setiawan"
-                />
+      <main class="position-sm-static">
+        <div class="hero-section">
+          <div
+            class="hero d-lg-flex justify-content-around align-items-center position-lg-relative mt-5"
+          >
+            <!-- HERO TEXT -->
+            <div class="hero-text position-lg-relative">
+              <h1 class="z-2">My name is Agus Setiawan...</h1>
+              <p id="typing" class="z-2">Web Developer based in Indonesia</p>
+              <button type="button" class="btn-hero btn mb-3">
+                Let’s talk with me <i class="bi bi-arrow-right-square-fill"></i>
+              </button>
+              <div class="whatsapp justify-content-start fs-6">
+                <a href="whatsapp.me/+6287822368008" class="me-5">
+                  <i class="bi bi-whatsapp"></i> Whatsapp
+                </a>
+                <a href="agussetiawanphy3@gmail.com">
+                  <i class="bi bi-at"></i> My Email</a
+                >
               </div>
-              <div class="col-md-6">
-                <label for="inputEmail4" class="form-label">Email</label>
-                <input
-                  type="email"
-                  class="form-control"
-                  id="inputEmail4"
-                  placeholder="12a@xx.com"
-                />
-              </div>
-              <div class="col-12">
-                <label for="inputAddress" class="form-label">Address</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="inputAddress"
-                  placeholder="1234 Main St"
-                />
-              </div>
-              <div class="col-md-6">
-                <p>Your message</p>
-                <textarea
-                  name="text-email"
-                  id="emailtext"
-                  cols="45"
-                  rows="7"
-                ></textarea>
-              </div>
-              <div class="col-12">
-                <button type="submit" class="btn btn-primary">Send</button>
-              </div>
-            </form>
-          </div>
-          <div class="google-maps rounded-1 w-60 h-50 ms-4 p-2">
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3963.118795002031!2d108.02921497370629!3d-6.6321650648307235!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e692cdba20d894b%3A0x1a2f695ac737f86d!2sSMP%20Negeri%204%20Terisi!5e0!3m2!1sid!2sid!4v1706383818746!5m2!1sid!2sid"
-              width="600"
-              height="450"
-              style="border: 0"
-              allowfullscreen=""
-              loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade"
-            ></iframe>
+            </div>
+
+            <!-- HERO IMAGE -->
+            <div class="hero-img position-relative">
+              <img src="./aguss.png" alt="" />
+            </div>
+            <div
+              class="blue-sosmed flex-column d-flex ms-3 row-gap-3 position-fixed"
+            >
+              <a href="/"><i class="bi bi-instagram"></i></a>
+              <a href="/"><i class="bi bi-github"></i></a>
+              <a href="/"><i class="media bi bi-linkedin"></i></a>
+              <hr style="rotate: 90deg; color: aqua" />
+            </div>
           </div>
         </div>
+        <!-- Absolute ICON Sosial Media -->
       </main>
     </div>
 
