--- a/works/works.html
+++ b/works/works.html
@@ -21,80 +21,78 @@
   <body>
     <div class="d-flex flex-row">
       <!-- Start Aside -->
-      <aside class="h-auto position-fixed">
+      <aside class="">
         <div
-          class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark"
-          style="width: 280px; height: 100vh"
+          class="aside d-flex flex-column flex-shrink-0 p-3 text-white bg-dark h-100"
+          style="max-width: 250px"
         >
-          <div class="text-nav p-3">
+          <div class="text-nav p-3 h-100 d-flex flex-column">
             <!-- start Name -->
             <a
               href="/"
               class="d-flex align-items-center text-white text-decoration-none"
             >
-              <span class="fs-1">agusSe.</span>
+              <span class="fs-1">Ag.</span>
             </a>
             <!-- End Name -->
 
             <!-- Start List Menu -->
             <ul class="nav nav-pills flex-column mt-5 position-relative">
-              <li class="nav-item">
+              <li class="nav-item d-flex flex-row align-items-center">
+                <i class="bi bi-house me-2"></i>
                 <a
                   href="#"
-                  class="nav-link text-white"
+                  class="nav-link text-white d-none d-sm-block"
                   aria-current="page"
                   data-bs-toggle="tooltip"
                   data-bs-placement="right"
                   data-bs-title="Tooltip on right"
                 >
-                  <i class="bi bi-house me-2"></i>
                   HOME
                 </a>
               </li>
-              <li>
-                <a href="#" class="nav-link text-white">
-                  <i class="bi bi-file-earmark-person me-2"></i>
+              <li class="nav-item d-flex flex-row align-items-center">
+                <i class="bi bi-file-earmark-person me-2"></i>
+                <a
+                  href="../about/about.html"
+                  class="nav-link text-white d-none d-sm-block"
+                >
                   ABOUT
                 </a>
               </li>
-              <li>
-                <a href="#" class="nav-link text-white">
-                  <i class="bi bi-collection me-2"></i>
+              <li class="nav-item d-flex flex-row align-items-center">
+                <i class="bi bi-collection me-2"></i>
+                <a
+                  href="./works.html"
+                  class="nav-link text-white d-none d-sm-block"
+                >
                   WORKS
                 </a>
               </li>
-              <li>
-                <a href="#" class="nav-link text-white">
-                  <i class="bi bi-envelope-at me-2"></i>
+              <li class="nav-item d-flex flex-row align-items-center">
+                <i class="bi bi-envelope-at me-2"></i>
+                <a
+                  href="../contact/contact.html"
+                  class="nav-link text-white d-none d-sm-block"
+                >
                   CONTACT
                 </a>
               </li>
             </ul>
             <!-- End List Menu-->
-            <!-- Start buttom list -->
-            <div class="mt-5 flex-column d-flex">
-              <div class="flex-column d-flex ms-3 row-gap-3">
-                <a href="/"
-                  ><i class="social-media bi bi-instagram text-white"></i
-                ></a>
-                <a href="/"
-                  ><i class="social-media bi bi-github text-white"></i>
-                </a>
-                <a href="/"
-                  ><i class="social-media bi bi-linkedin text-white"></i>
-                </a>
-              </div>
-              <div class="" style="margin-top: 7rem">
-                <p class="fw-light fs-10" style="font-size: x-small">
-                  Copyright ©2024 <span>Agus Setiwan</span>. All right reserved.
-                </p>
-              </div>
+            <!-- Sart buttom list -->
+
+            <div class="" style="margin-top: 7rem">
+              <p class="fw-light fs-10" style="font-size: x-small">
+                Copyright ©2024 <span>Agus Setiwan</span>. All right reserved.
+              </p>
             </div>
+
             <!-- End buttom list -->
           </div>
         </div>
       </aside>
-      <main class="px-3 position-relative">
+      <main class="px-3">
         <div class="welcome mt-5">
           <p>Work</p>
           <h1 class="text-dark">Recent project</h1>
@@ -240,19 +238,19 @@
             >
               <div id="list-item-1">
                 <h4>Item 1</h4>
-                <img src="../home/aguss.png" alt="" />
+                <img src="../aguss.png" alt="" />
               </div>
               <div id="list-item-2">
                 <h4>Item 2</h4>
-                <img src="../home/aguss.png" alt="" />
+                <img src="../aguss.png" alt="" />
               </div>
               <div id="list-item-3">
                 <h4>Item 3</h4>
-                <img src="../home/aguss.png" alt="" />
+                <img src="../aguss.png" alt="" />
               </div>
               <div id="list-item-4">
                 <h4>Item 4</h4>
-                <img src="../home/aguss.png" alt="" />
+                <img src="../aguss.png" alt="" />
               </div>
             </div>
           </div>
@@ -300,7 +298,7 @@
                 </svg>
                 <div class="carousel-caption d-none d-md-block">
                   <div class="card-carousel">
-                    <img src="../home/aguss.png" alt="" />
+                    <img src="../aguss.png" alt="" />
                     <p>
                       Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                       Blanditiis rerum voluptate deleniti, animi eligendi quis
@@ -334,7 +332,7 @@
                 </svg>
                 <div class="carousel-caption d-none d-md-block">
                   <div class="card-carousel">
-                    <img src="../home/aguss.png" alt="" />
+                    <img src="../aguss.png" alt="" />
                     <p>
                       Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                       Blanditiis rerum voluptate deleniti, animi eligendi quis
@@ -366,7 +364,7 @@
                 </svg>
                 <div class="carousel-caption d-none d-md-block">
                   <div class="card-carousel">
-                    <img src="../home/aguss.png" alt="" />
+                    <img src="../aguss.png" alt="" />
                     <p>
                       Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                       Blanditiis rerum voluptate deleniti, animi eligendi quis
