--- a/works/works.html
+++ b/works/works.html
@@ -41,7 +41,7 @@
               <li class="nav-item d-flex flex-row align-items-center">
                 <i class="bi bi-house me-2"></i>
                 <a
-                  href="#"
+                  href="../index.html"
                   class="nav-link text-white d-none d-sm-block"
                   aria-current="page"
                   data-bs-toggle="tooltip"
@@ -407,6 +407,12 @@
           </div>
         </div>
       </main>
+      <div class="blue-sosmed flex-column d-flex ms-3 row-gap-3 position-fixed">
+        <a href="/"><i class="bi bi-instagram"></i></a>
+        <a href="/"><i class="bi bi-github"></i></a>
+        <a href="/"><i class="media bi bi-linkedin"></i></a>
+        <hr style="rotate: 90deg; color: aqua" />
+      </div>
     </div>
 
     <script
